# gartus

./: .gitignore  .gitmodules  .vimspector.json  Cargo.toml  Justfile  README.md  makefile  matrix.py  rust-toolchain.toml  script
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: render_performance.rs
doc/: search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Sub.js  trait.SubAssign.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/lib/: all.html  index.html  sidebar-items.js
doc/lib/graphics/: index.html  sidebar-items.js
doc/lib/graphics/display/: index.html  sidebar-items.js  struct.Canvas.html  struct.Pixel.html
doc/lib/graphics/draw/: index.html
doc/lib/graphics/matrix/: index.html  sidebar-items.js  struct.Matrix.html
doc/lib/graphics/transformations/: index.html
doc/lib/parser/: index.html  struct.Parser.html
doc/lib/utils/: fn.animation.html  fn.view_animation.html  index.html  sidebar-items.js
doc/src/lib/: graphics.rs.html  lib.rs.html  parser.rs.html  utils.rs.html
doc/src/lib/graphics/: display.rs.html  draw.rs.html  matrix.rs.html  transformations.rs.html
examples/: advanced_shapes.rs  cat.rs  celestial_dragon.rs  cosmic_loom.rs  cstack_model_theater.rs  curve_cathedral.rs  frac_tree.rs  fractals.rs  gallery_3d.rs  geass.rs  heart.rs  it_takes_two.rs  maze.rs  mesh_joltik.rs  mesh_kirby_lighting.rs  mesh_spot_dragon.rs  mesh_teapot.rs  owl.rs  polygon_orbit.rs  porygon.rs  quantum_portal.rs  raytracing_curl_smoke.rs  raytracing_fake_fluid.rs  raytracing_fireflies.rs  raytracing_foam_spray.rs  raytracing_grid_volume.rs  raytracing_kaleidoscope.rs  raytracing_mandelbulb.rs  raytracing_particle_splats.rs  raytracing_prism_rain.rs  raytracing_stable_fluid_smoke.rs  raytracing_weekend.rs  scotty_carousel.rs  solarsystem.rs  stable_fluid_2d.rs  student_mdl.rs  teapot.rs  terrain.rs  transformation_matrices.rs  walle_mdl.rs
examples/data/: teapot.rs
examples/data/meshes/: fixture_weird_ascii.stl  teapot_ascii.stl
examples/data/scripts/: teapot_mesh.cg
examples/raytracing/: ggx_microfacet.rs  life.rs  liquid_blob_surface.rs  marching_cubes_sphere.rs  next_weekend.rs  simulated_smoke_volume.rs  weekend.rs
scripts/: curve_cathedral.cg  pig.cg  porygon_script  student.mdl  transform.cg  walle.mdl
src/: cat.rs  external.rs  gmath.rs  graphics.rs  lib.rs  main.rs  old_parser.rs  parser.rs  prelude.rs  utils.rs
src/gmath/: edge_matrix.rs  geometry.rs  helpers.rs  matrix.rs  parametric.rs  perlin.rs  polygon_matrix.rs  procedural.rs  quaternion.rs  random.rs  ray.rs  sampling.rs  shapes.rs  stack.rs  transformations.rs  vector.rs
src/graphics/: animation.rs  camera.rs  colors.rs  config.rs  display.rs  draw.rs  filters.rs  lighting.rs  material.rs  matrix.rs  primitives.rs  ray.rs  raytracing.rs  scene.rs  tests.rs  texture.rs  textured_raster.rs  transfomations.rs  transformations.rs  turtle.rs  utils.rs  vector.rs
src/graphics/raytracing/: bvh.rs  environment.rs  instance.rs  material.rs  mesh.rs  object.rs  pdf.rs  renderer.rs  scene.rs  scenes.rs  sdf.rs  spectrum.rs  texture.rs  volume.rs  weekend.rs
src/graphics/raytracing/volume/: field.rs  grid.rs  marching_cubes.rs  medium.rs  mod.rs  particles.rs  procedural.rs  warp.rs
src/graphics/raytracing/volume/solver/: advection.rs  linear_solve.rs  mac.rs  mac3.rs  mod.rs  projection.rs
src/mdl/: animation.rs  ast.rs  diagnostic.rs  executor.rs  lexer.rs  loader.rs  mod.rs  parser.rs  runtime.rs  semantic.rs
tests/: backwards.rs  cat.rs  dw_tests.rs  dw_two_tests.rs  face.mdl  geass.rs  heart.rs  porygon.rs  porygon_script  random.rs  script.rs  script_3d  script_cstack  script_curves  script_light  script_polygon  script_solid  script_testing  script_transform  simple_anim.mdl  test.mdl
