[package]
name = "gartus"
version = "0.1.0"
authors = ["Seniormars <cjh16@rice.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = 1
incremental = true
lto = "off"

[dependencies]
num = "0.3.1"

[dev-dependencies]
rand = "0.8.5"
num = "0.3.1"

[features]
default = ["external", "turtle", "filters", "fancy_math"]
external = ["filters"]
filters = []
turtle = []
fancy_math = []
old_parser = []

[[example]]
name = "frac_tree"
required-features = ["turtle"]

[[example]]
name = "maze"
required-features = ["turtle"]

[[example]]
name = "mesh_teapot"
required-features = ["external"]

[[example]]
name = "mesh_joltik"
required-features = ["external"]

[[example]]
name = "mesh_kirby_lighting"
required-features = ["external"]

[[example]]
name = "mesh_spot_dragon"
required-features = ["external"]

[[example]]
name = "cstack_model_theater"
required-features = ["external"]

[[example]]
name = "walle_mdl"
required-features = ["external"]

[[example]]
name = "student_mdl"
required-features = ["external"]

[[example]]
name = "solarsystem"

[[example]]
name = "it_takes_two"
required-features = ["external"]

[[example]]
name = "curve_cathedral"
required-features = ["old_parser"]

# [[bench]]
# name = "derp"
# harness = false
