[package]
name = "gartus"
version = "0.1.0"
authors = ["Seniormars <cjh16@rice.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = 1
incremental = true
lto = "off"

[profile.render]
inherits = "release"
debug = 0
incremental = false
lto = "thin"
codegen-units = 1

[dependencies]
num = "0.4.3"
rand = { version = "0.10.1" }
rayon = { version = "1.10", optional = true }

[features]
default = ["external", "turtle", "filters", "rayon"]
external = ["filters"]
filters = []
turtle = []
old_parser = []
rayon = ["dep:rayon"]

[[example]]
name = "frac_tree"
required-features = ["turtle"]

[[example]]
name = "maze"
required-features = ["turtle"]

[[example]]
name = "mesh_teapot"
required-features = ["external"]

[[example]]
name = "mesh_joltik"
required-features = ["external"]

[[example]]
name = "mesh_kirby_lighting"
required-features = ["external"]

[[example]]
name = "mesh_spot_dragon"
required-features = ["external"]

[[example]]
name = "cstack_model_theater"
required-features = ["external"]

[[example]]
name = "walle_mdl"
required-features = ["external"]

[[example]]
name = "student_mdl"
required-features = ["external"]

[[example]]
name = "solarsystem"

[[example]]
name = "it_takes_two"
required-features = ["external"]

[[example]]
name = "curve_cathedral"
required-features = ["old_parser"]

[[example]]
name = "raytracing_weekend"
path = "examples/raytracing/weekend.rs"

[[example]]
name = "next_weekend"
path = "examples/raytracing/next_weekend.rs"
required-features = ["external"]

# [[bench]]
# name = "derp"
# harness = false
