[package]
name = "gartus"
version = "0.1.0"
authors = ["Seniormars <cjh16@rice.edu>"]
edition = "2024"
description = "A Rust graphics library for raster drawing, mesh scenes, MDL scripts, and path tracing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SeniorMars/gartus"
readme = "README.md"
keywords = ["graphics", "rendering", "raster", "ray-tracing", "mdl"]
categories = ["graphics", "rendering", "multimedia::images", "mathematics"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = 0
incremental = false
lto = "thin"
codegen-units = 1

[profile.release-dev]
inherits = "release"
debug = 1
incremental = true
lto = "off"
codegen-units = 16

[profile.render]
inherits = "release"
debug = 0
incremental = false
lto = "thin"
codegen-units = 1

[dependencies]
num = "0.4.3"
rand = { version = "0.10.1" }
rayon = { version = "1.10", optional = true }

[features]
default = ["external", "turtle", "filters", "rayon"]
external = ["filters"]
filters = []
turtle = []
old_parser = []
rayon = ["dep:rayon"]

[[example]]
name = "frac_tree"
required-features = ["turtle"]

[[example]]
name = "maze"
required-features = ["turtle"]

[[example]]
name = "mesh_teapot"
required-features = ["external"]

[[example]]
name = "mesh_joltik"
required-features = ["external"]

[[example]]
name = "mesh_kirby_lighting"
required-features = ["external"]

[[example]]
name = "mesh_spot_dragon"
required-features = ["external"]

[[example]]
name = "walle_mdl"
required-features = ["external"]

[[example]]
name = "student_mdl"
required-features = ["external"]

[[example]]
name = "solarsystem"

[[example]]
name = "scotty_carousel"
required-features = ["external"]

[[example]]
name = "it_takes_two"
required-features = ["external"]

[[example]]
name = "curve_cathedral"
required-features = ["old_parser"]

[[example]]
name = "raytracing_weekend"
path = "examples/raytracing/weekend.rs"

[[example]]
name = "next_weekend"
path = "examples/raytracing/next_weekend.rs"
required-features = ["external"]

[[example]]
name = "life"
path = "examples/raytracing/life.rs"

[[example]]
name = "simulated_smoke_volume"
path = "examples/raytracing/simulated_smoke_volume.rs"

[[example]]
name = "marching_cubes_sphere"
path = "examples/raytracing/marching_cubes_sphere.rs"

[[example]]
name = "liquid_blob_surface"
path = "examples/raytracing/liquid_blob_surface.rs"
